[gd_scene load_steps=35 format=3 uid="uid://bvxf7rqtv62xe"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_ljfum"]
[ext_resource type="Texture2D" uid="uid://gcl8fu66f1xa" path="res://Assets/SGQ_Dungeon/characters/main/elf.png" id="2_h7xbe"]
[ext_resource type="PackedScene" uid="uid://cnepxgt3s5xac" path="res://Scenes/Player/Weapons/Sword.tscn" id="4_wvum7"]
[ext_resource type="PackedScene" uid="uid://bkag140m6j6yg" path="res://Scenes/Player/Weapons/Pickaxe.tscn" id="5_jldmr"]
[ext_resource type="PackedScene" uid="uid://nj1ke8tpvo1v" path="res://Scenes/Player/Weapons/Bow.tscn" id="5_vmkyj"]

[sub_resource type="Animation" id="Animation_ebspr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xj2jv"]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62]
}

[sub_resource type="Animation" id="Animation_uua7e"]
resource_name = "hit_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_3lvkj"]
resource_name = "hit_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_rtvnj"]
resource_name = "idle_left"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 8, 9]
}

[sub_resource type="Animation" id="Animation_7e0ci"]
resource_name = "idle_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_o74bk"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24]
}

[sub_resource type="Animation" id="Animation_q6u8g"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eu43x"]
_data = {
"RESET": SubResource("Animation_ebspr"),
"death": SubResource("Animation_xj2jv"),
"hit_left": SubResource("Animation_uua7e"),
"hit_right": SubResource("Animation_3lvkj"),
"idle_left": SubResource("Animation_rtvnj"),
"idle_right": SubResource("Animation_7e0ci"),
"walk_left": SubResource("Animation_o74bk"),
"walk_right": SubResource("Animation_q6u8g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dh006"]
size = Vector2(13, 18)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w51as"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4va2v"]
animation = &"hit_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r15y0"]
animation = &"hit_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_l84pp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4va2v")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_r15y0")
blend_point_1/pos = 1.1
max_space = 1.1
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n3oo6"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ucfat"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_k00b6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_n3oo6")
blend_point_0/pos = 1.1
blend_point_1/node = SubResource("AnimationNodeAnimation_ucfat")
blend_point_1/pos = -1.0
max_space = 1.1
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_paiil"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k3d1s"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_xwc0h"]
blend_point_0/node = SubResource("AnimationNodeAnimation_paiil")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_k3d1s")
blend_point_1/pos = 1.1
max_space = 1.1
blend_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2yaaa"]
advance_mode = 2
advance_condition = &"IsMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0532g"]
advance_mode = 2
advance_condition = &"IsNotMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_02l38"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2adv5"]
advance_mode = 2
advance_condition = &"JustHit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w061b"]
switch_mode = 2
advance_mode = 2
advance_condition = &"IsNotMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8grgk"]
switch_mode = 2
advance_mode = 2
advance_condition = &"IsMoving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_61f3n"]
advance_mode = 2
advance_condition = &"JustHit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xclgo"]
advance_mode = 2
advance_condition = &"IsDying"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_le1n5"]
states/Death/node = SubResource("AnimationNodeAnimation_w51as")
states/Death/position = Vector2(706, 268)
states/End/position = Vector2(872, 268)
states/Hit/node = SubResource("AnimationNodeBlendSpace1D_l84pp")
states/Hit/position = Vector2(487, 268)
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_k00b6")
states/Idle/position = Vector2(372, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_xwc0h")
states/Move/position = Vector2(599, 100)
transitions = ["Idle", "Move", SubResource("AnimationNodeStateMachineTransition_2yaaa"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_0532g"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_02l38"), "Idle", "Hit", SubResource("AnimationNodeStateMachineTransition_2adv5"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_w061b"), "Hit", "Move", SubResource("AnimationNodeStateMachineTransition_8grgk"), "Move", "Hit", SubResource("AnimationNodeStateMachineTransition_61f3n"), "Hit", "Death", SubResource("AnimationNodeStateMachineTransition_xclgo")]
graph_offset = Vector2(9, 77.6147)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 13
motion_mode = 1
script = ExtResource("1_ljfum")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_h7xbe")
hframes = 7
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_eu43x")
}
autoplay = "idle_right"
speed_scale = 0.6

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_dh006")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true

[node name="Weapons" type="Node2D" parent="."]

[node name="Sword" parent="Weapons" instance=ExtResource("4_wvum7")]

[node name="Pickaxe" parent="Weapons" instance=ExtResource("5_jldmr")]

[node name="Bow" parent="Weapons" instance=ExtResource("5_vmkyj")]

[node name="BowTimer" type="Timer" parent="Weapons"]
wait_time = 0.75

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_le1n5")
anim_player = NodePath("../Sprite/AnimationPlayer")
parameters/conditions/IsDying = false
parameters/conditions/IsMoving = false
parameters/conditions/IsNotMoving = false
parameters/conditions/JustHit = false
parameters/Hit/blend_position = 0
parameters/Idle/blend_position = 0.223573
parameters/Move/blend_position = -0.0458372

[connection signal="timeout" from="Weapons/BowTimer" to="." method="_on_bow_timer_timeout"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
